--- a/report/assets/templates.html
+++ b/report/assets/templates.html
@@ -530,18 +530,18 @@ limitations under the License.
 
 <!-- Lighthouse score gauge - explodey version -->
 <template id="explodeyGauge">
-  <div class='lh-exp-gauge-component'>
-    <div class='lh-exp-gauge__wrapper'>
-      <div class='lh-exp-gauge__svg-wrapper'>
-        <svg class='lh-exp-gauge'>
-          <g class='lh-exp-gauge__inner'>
-            <circle class='lh-exp-gauge__bg' />
-            <circle class='lh-exp-gauge__base lh-exp-gauge--faded' />
-            <circle class='lh-exp-gauge__arc' />
-            <text class='lh-exp-gauge__percentage'></text>
+  <div class="lh-exp-gauge-component">
+    <div class="lh-exp-gauge__wrapper">
+      <div class="lh-exp-gauge__svg-wrapper">
+        <svg class="lh-exp-gauge">
+          <g class="lh-exp-gauge__inner">
+            <circle class="lh-exp-gauge__bg" />
+            <circle class="lh-exp-gauge__base lh-exp-gauge--faded" />
+            <circle class="lh-exp-gauge__arc" />
+            <text class="lh-exp-gauge__percentage"></text>
           </g>
-          <g class='lh-exp-gauge__outer'>
-            <circle class='cover' />
+          <g class="lh-exp-gauge__outer">
+            <circle class="lh-cover" />
           </g>
         </svg>
       </div>
